# study-2026

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
game/: CMakeLists.txt
game/shaders/: s00_fragment.sc  s00_vertex.sc
game/src/: main.cpp
include/: mapgen.h
src/: main.cpp
study-bgfx-cmake/: CMakeLists.txt  CMakePresets.json  vcpkg.json
study-bgfx-cmake/cmake/: common.cmake
study-bgfx-cmake/example-00/: CMakeLists.txt
study-bgfx-cmake/example-00/src/: main.cpp
study-bgfx-cmake/example-01/: CMakeLists.txt
study-bgfx-cmake/example-01/include/: ColorMap.h  FileUtil.h  mapgen.h
study-bgfx-cmake/example-01/material/: 00_fragment.glsl  00_vertex.glsl  01_fragment.glsl  01_vertex.glsl  showTex_fragment.glsl  showTex_vertex.glsl
study-bgfx-cmake/example-01/shaders/: s00_vertex.sc
study-bgfx-cmake/example-01/src/: main.cpp
study-bgfx-mapgen/: .gitignore  xmake.lua
study-bgfx-mapgen/include/: ColorMap.h  Common.h  ElevationGen.h  Entity.h  Entity00.h  Entity01.h  Entity02.h  ListRenderable.h  MapGen.h  MyCallback.h  PoissonDisk.h  Renderable.h
study-bgfx-mapgen/include/simplexnoise/: SimplexNoise.h
study-bgfx-mapgen/include/util/: MtxUtil.h
study-bgfx-mapgen/shaders/: s01.frag  s01.varying.def.sc  s01.vert  varying.def.sc
study-bgfx-mapgen/src/: Delaunator.cpp  SimplexNoise.cpp  main.cpp
study-bgfx-xmake/: xmake.lua
study-bgfx-xmake/shaders/: bgfx_shader.sh  varying.def.sc
study-bgfx-xmake/src/: main.cpp
